# agora-gstreamer

./: .gitignore  CLAUDE.md  README.md
agora/libagorac/: agorac.cpp  agorac.h  agoraconfig.h  agoraevent.cpp  agoraio.cpp  agoraio.h  agoratype.h  build_errors.txt  install.sh  makefile  syncbuffer.cpp  syncbuffer.h  workqueue.h
agora/libagorac/helpers/: agoralog.cpp  agoralog.h  context.h  utilities.cpp  utilities.h
agora/libagorac/observer/: connectionobserver.cpp  connectionobserver.h  pcmframeobserver.cpp  userobserver.cpp  userobserver.h
agora/sdk/agora_sdk_aarch64_4.4.32/agora_sdk/include/: AgoraBase.h  IAgoraMediaComponentFactory.h  IAgoraMediaRtcRecorder.h  IAgoraMediaRtcRecorderEventHandler.h
gst-agora/: meson.build  meson_options.txt
gst-agora/plugin-src/: meson.build
gst-agora/plugin-src/agoraioudp/: gstagoraioudp.c  gstagoraioudp.h
